compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_list.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 140
expression: "\n    pub fn main() {\n        [1, 2, 3]\n\t\t\t\t2\n    }"
snapshot_kind: text
---
----- SOURCE CODE

    pub fn main() {
        [1, 2, 3]
				2
    }

----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:9
  │
3 │         [1, 2, 3]
  │         ^^^^^^^^^ This value is never used

Hint: You can safely remove it.
