compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_module_select_constructor_call.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1476
expression: "\nimport wibble\n\npub fn main() {\n  wibble.Wibble(1)\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wibble(Int) }

-- main.gleam

import wibble

pub fn main() {
  wibble.Wibble(1)
  1
}


----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   wibble.Wibble(1)
  │   ^^^^^^^^^^^^^^^^ This value is never used

Hint: You can safely remove it.
