compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_module_select_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1491
expression: "\nimport wibble\n\npub fn main() {\n  wibble.println\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub fn println(a) { Nil }

-- main.gleam

import wibble

pub fn main() {
  wibble.println
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   wibble.println
  │   ^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
