compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_module_wuth_alias_warning_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1068
expression: import gleam/wibble as wobble
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub const one = 1

-- main.gleam
import gleam/wibble as wobble

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ import gleam/wibble as wobble
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
