compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_pipeline_ending_with_variant_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1414
expression: "\npub type Wibble(a) { Wibble(a) }\npub fn wibble(a) { a }\n\npub fn main() {\n  1 |> wibble |> Wibble\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble(a) { Wibble(a) }
pub fn wibble(a) { a }

pub fn main() {
  1 |> wibble |> Wibble
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:6:3
  │
6 │   1 |> wibble |> Wibble
  │   ^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
