compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_pipeline_ending_with_variant_raises_a_warning_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1429
expression: "\nimport wibble\n\npub fn wobble(a) { a }\n\npub fn main() {\n  1 |> wobble |> wibble.Wibble\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wibble(Int) }

-- main.gleam

import wibble

pub fn wobble(a) { a }

pub fn main() {
  1 |> wobble |> wibble.Wibble
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:7:3
  │
7 │   1 |> wobble |> wibble.Wibble
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
