compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_private_const_warnings_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 267
expression: const a = 1
snapshot_kind: text
---
----- SOURCE CODE
const a = 1

----- WARNING
warning: Unused private constant
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ const a = 1
  │ ^^^^^^^ This private constant is never used

Hint: You can safely remove it.
